Publishing newest RDoc documentation for request-log-analyzer

--- a/files/README_rdoc.html
+++ b/files/README_rdoc.html
@@ -56,7 +56,7 @@
     </tr>
     <tr class="top-aligned-row">
       <td><strong>Last Update:</strong></td>
-      <td>Sun Jan 18 16:29:40 +0100 2009</td>
+      <td>Sun Jan 18 17:10:16 +0100 2009</td>
     </tr>
     </table>
   </div>
@@ -84,7 +84,7 @@ actions are best candidates for optimization.
 </li>
 <li>Uses several metrics, including cumulative request time, average request
 time, process blockers, database and rendering time, HTTP methods and
-states, Rails action cache statistics, etc.) (Sample output: <a
+statuses, Rails action cache statistics, etc.) (Sample output: <a
 href="http://wiki.github.com/wvanbergen/request-log-analyzer/sample-output">wiki.github.com/wvanbergen/request-log-analyzer/sample-output</a>)
 
 </li>
@@ -131,7 +131,7 @@ request-log-analyzer like this:
 </pre>
 <p>
 For more details and available command line options, see the
-project&#8216;s wiki:<a
+project&#8216;s wiki: <a
 href="http://wiki.github.com/wvanbergen/request-log-analyzer/basic-usage">wiki.github.com/wvanbergen/request-log-analyzer/basic-usage</a>
 </p>
 <h2>Additional information</h2>
@@ -140,12 +140,16 @@ href="http://wiki.github.com/wvanbergen/request-log-analyzer/basic-usage">wiki.g
 href="http://wiki.github.com/wvanbergen/request-log-analyzer">wiki.github.com/wvanbergen/request-log-analyzer</a>
 
 </li>
+<li>RDoc documentation: <a
+href="http://wvanbergen.github.com/request-log-analyzer">wvanbergen.github.com/request-log-analyzer</a>
+
+</li>
 <li>wvanbergen&#8216;s blog posts: <a
 href="http://techblog.floorplanner.com/tag/request-log-analyzer">techblog.floorplanner.com/tag/request-log-analyzer</a>
 
 </li>
-<li>bart ten brinke&#8216;s blog posts: <a
-href="http://movesonrails.com">movesonrails.com</a>
+<li>barttenbrinke&#8216;s blog posts: <a
+href="http://movesonrails.com/articles/tag/analyzer">movesonrails.com/articles/tag/analyzer</a>
 
 </li>
 </ul>
