--- a/classes/RequestLogAnalyzer/FileFormat/Merb.html
+++ b/classes/RequestLogAnalyzer/FileFormat/Merb.html
@@ -5,7 +5,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>Module: RequestLogAnalyzer::FileFormat::Merb</title>
+  <title>Class: RequestLogAnalyzer::FileFormat::Merb</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
   <meta http-equiv="Content-Script-Type" content="text/javascript" />
   <link rel="stylesheet" href="../../.././rdoc-style.css" type="text/css" media="screen" />
@@ -49,7 +49,7 @@
     <div id="classHeader">
         <table class="header-table">
         <tr class="top-aligned-row">
-          <td><strong>Module</strong></td>
+          <td><strong>Class</strong></td>
           <td class="class-name-in-header">RequestLogAnalyzer::FileFormat::Merb</td>
         </tr>
         <tr class="top-aligned-row">
@@ -62,6 +62,14 @@
             </td>
         </tr>
 
+        <tr class="top-aligned-row">
+            <td><strong>Parent:</strong></td>
+            <td>
+                <a href="Base.html">
+                Base
+               </a>
+            </td>
+        </tr>
         </table>
     </div>
   <!-- banner header -->
@@ -85,19 +93,6 @@
     <div id="section">
 
 
-    <div id="constants-list">
-      <h3 class="section-bar">Constants</h3>
-
-      <div class="name-list">
-        <table summary="Constants">
-        <tr class="top-aligned-row context-row">
-          <td class="context-item-name">LINE_DEFINITIONS</td>
-          <td>=</td>
-          <td class="context-item-value">{          # ~ Started request handling: Fri Aug 29 11:10:23 +0200 2008     :started =&gt; {       :header   =&gt; true,       :teaser   =&gt; /Started/,       :regexp   =&gt; /Started request handling\:\ (.+)/,       :captures =&gt; [{ :name =&gt; :timestamp, :type =&gt; :timestamp, :anonymize =&gt; :slightly }]</td>
-        </tr>
-        </table>
-      </div>
-    </div>
 
 
 
