--- a/classes/RequestLogAnalyzer/FileFormat/Rails.html
+++ b/classes/RequestLogAnalyzer/FileFormat/Rails.html
@@ -65,8 +65,8 @@
         <tr class="top-aligned-row">
             <td><strong>Parent:</strong></td>
             <td>
-                <a href="../FileFormat.html">
-                RequestLogAnalyzer::FileFormat
+                <a href="Base.html">
+                Base
                </a>
             </td>
         </tr>
@@ -125,7 +125,7 @@ href="http://floorplanner.local/demo">floorplanner.local/demo</a>]
         <tr class="top-aligned-row context-row">
           <td class="context-item-name">REQUEST_CATEGORIZER</td>
           <td>=</td>
-          <td class="context-item-value">Proc.new do |request|     format = request[:format] || 'html'</td>
+          <td class="context-item-value">Proc.new do |request|       format = request[:format] || 'html'</td>
         </tr>
         </table>
       </div>
