--- a/classes/RequestLogAnalyzer/Filter.html
+++ b/classes/RequestLogAnalyzer/Filter.html
@@ -59,16 +59,16 @@
                 lib/request_log_analyzer/filter/anonimize.rb
                 </a>
         <br />
-                <a href="../../files/lib/request_log_analyzer/filter/base_rb.html">
-                lib/request_log_analyzer/filter/base.rb
-                </a>
-        <br />
                 <a href="../../files/lib/request_log_analyzer/filter/field_rb.html">
                 lib/request_log_analyzer/filter/field.rb
                 </a>
         <br />
                 <a href="../../files/lib/request_log_analyzer/filter/timespan_rb.html">
                 lib/request_log_analyzer/filter/timespan.rb
+                </a>
+        <br />
+                <a href="../../files/lib/request_log_analyzer/filter_rb.html">
+                lib/request_log_analyzer/filter.rb
                 </a>
         <br />
             </td>
@@ -88,6 +88,13 @@
 
    </div>
 
+    <div id="method-list">
+      <h3 class="section-bar">Methods</h3>
+
+      <div class="name-list">
+      <a href="#M000123">const_missing</a>&nbsp;&nbsp;
+      </div>
+    </div>
 
   </div>
 
@@ -113,6 +120,39 @@ Class <a href="Filter/Timespan.html" class="link">RequestLogAnalyzer::Filter::Ti
 
 
     <!-- if method_list -->
+    <div id="methods">
+      <h3 class="section-bar">Public Class methods</h3>
+
+      <div id="method-M000123" class="method-detail">
+        <a name="M000123"></a>
+
+        <div class="method-heading">
+          <a href="#M000123" class="method-signature">
+          <span class="method-name">const_missing</span><span class="method-args">(const)</span>
+          </a>
+        </div>
+      
+        <div class="method-description">
+          <p>
+<a href="Filter.html">Filter</a> class loader using <a
+href="Filter.html#M000123">const_missing</a> This function will
+automatically load the class file based on the name of the class
+</p>
+          <p><a class="source-toggle" href="#"
+            onclick="toggleCode('M000123-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000123-source">
+<pre>
+   <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter.rb, line 5</span>
+5:   <span class="ruby-keyword kw">def</span> <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">const_missing</span>(<span class="ruby-identifier">const</span>)
+6:     <span class="ruby-constant">RequestLogAnalyzer</span><span class="ruby-operator">::</span><span class="ruby-identifier">load_default_class_file</span>(<span class="ruby-keyword kw">self</span>, <span class="ruby-identifier">const</span>)
+7:   <span class="ruby-keyword kw">end</span>
+</pre>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
 
 
   </div>
