--- a/classes/RequestLogAnalyzer/LogProcessor.html
+++ b/classes/RequestLogAnalyzer/LogProcessor.html
@@ -124,7 +124,7 @@ Currently, two processors are supported, :strip and :anonymize.
       <h3 class="section-bar">Included Modules</h3>
 
       <div id="includes-list">
-        <span class="include-name">RequestLogAnalyzer::FileFormat::Awareness</span>
+        <span class="include-name"><a href="FileFormat/Awareness.html">RequestLogAnalyzer::FileFormat::Awareness</a></span>
       </div>
     </div>
 
