--- a/classes/RequestLogAnalyzer/Anonymizers.html
+++ b/classes/RequestLogAnalyzer/Anonymizers.html
@@ -80,8 +80,8 @@
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000077">anonymizer_for_ip</a>&nbsp;&nbsp;
-      <a href="#M000078">anonymizer_for_url</a>&nbsp;&nbsp;
+      <a href="#M000103">anonymizer_for_ip</a>&nbsp;&nbsp;
+      <a href="#M000104">anonymizer_for_url</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -103,19 +103,19 @@
     <div id="methods">
       <h3 class="section-bar">Public Instance methods</h3>
 
-      <div id="method-M000077" class="method-detail">
-        <a name="M000077"></a>
+      <div id="method-M000103" class="method-detail">
+        <a name="M000103"></a>
 
         <div class="method-heading">
-          <a href="#M000077" class="method-signature">
+          <a href="#M000103" class="method-signature">
           <span class="method-name">anonymizer_for_ip</span><span class="method-args">(value, capture_definition)</span>
           </a>
         </div>
       
         <div class="method-description">
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000077-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000077-source">
+            onclick="toggleCode('M000103-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000103-source">
 <pre>
    <span class="ruby-comment cmt"># File lib/request_log_analyzer/line_definition.rb, line 4</span>
 4:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">anonymizer_for_ip</span>(<span class="ruby-identifier">value</span>, <span class="ruby-identifier">capture_definition</span>)
@@ -126,23 +126,23 @@
         </div>
       </div>
 
-      <div id="method-M000078" class="method-detail">
-        <a name="M000078"></a>
+      <div id="method-M000104" class="method-detail">
+        <a name="M000104"></a>
 
         <div class="method-heading">
-          <a href="#M000078" class="method-signature">
+          <a href="#M000104" class="method-signature">
           <span class="method-name">anonymizer_for_url</span><span class="method-args">(value, capture_definition)</span>
           </a>
         </div>
       
         <div class="method-description">
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000078-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000078-source">
+            onclick="toggleCode('M000104-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000104-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/request_log_analyzer/line_definition.rb, line 8</span>
  8:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">anonymizer_for_url</span>(<span class="ruby-identifier">value</span>, <span class="ruby-identifier">capture_definition</span>)
- 9:       <span class="ruby-identifier">value</span>.<span class="ruby-identifier">sub</span>(<span class="ruby-regexp re">/^https?\:\/\/[A-z0-9\.-]+\//</span>, <span class="ruby-value str">&quot;http://example.com/&quot;</span>)
+ 9:       <span class="ruby-identifier">value</span>.<span class="ruby-identifier">sub</span>(<span class="ruby-regexp re">/^https?\:\/\/[A-Za-z0-9\.-]+\//</span>, <span class="ruby-value str">&quot;http://example.com/&quot;</span>)
 10:     <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
