--- a/classes/RequestLogAnalyzer/Controller.html
+++ b/classes/RequestLogAnalyzer/Controller.html
@@ -81,8 +81,8 @@
     <div id="description">
       <p>
 The <a href="Controller.html">RequestLogAnalyzer::Controller</a> class
-creates a <a href="LogParser.html">LogParser</a> instance for the requested
-file format, and connect it with sources and aggregators.
+creates a LogParser instance for the requested file format, and connect it
+with sources and aggregators.
 </p>
 <p>
 Sources are streams or files from which the requests will be parsed.
@@ -142,7 +142,7 @@ helpful to parse requests from several logrotated log files.
       <h3 class="section-bar">Included Modules</h3>
 
       <div id="includes-list">
-        <span class="include-name">RequestLogAnalyzer::FileFormat::Awareness</span>
+        <span class="include-name"><a href="FileFormat/Awareness.html">RequestLogAnalyzer::FileFormat::Awareness</a></span>
       </div>
     </div>
 
@@ -252,7 +252,7 @@ of the report. Defaults to 80.
 62:         <span class="ruby-identifier">options</span>.<span class="ruby-identifier">store</span>(<span class="ruby-identifier">:source_files</span>, <span class="ruby-identifier">arguments</span>.<span class="ruby-identifier">parameters</span>)
 63:       <span class="ruby-keyword kw">end</span>
 64:       
-65:       <span class="ruby-identifier">controller</span> = <span class="ruby-constant">Controller</span>.<span class="ruby-identifier">new</span>(<span class="ruby-constant">RequestLogAnalyzer</span><span class="ruby-operator">::</span><span class="ruby-constant">Source</span><span class="ruby-operator">::</span><span class="ruby-constant">LogFile</span>.<span class="ruby-identifier">new</span>(<span class="ruby-identifier">file_format</span>, <span class="ruby-identifier">options</span>), <span class="ruby-identifier">options</span>)
+65:       <span class="ruby-identifier">controller</span> = <span class="ruby-constant">Controller</span>.<span class="ruby-identifier">new</span>(<span class="ruby-constant">RequestLogAnalyzer</span><span class="ruby-operator">::</span><span class="ruby-constant">Source</span><span class="ruby-operator">::</span><span class="ruby-constant">LogParser</span>.<span class="ruby-identifier">new</span>(<span class="ruby-identifier">file_format</span>, <span class="ruby-identifier">options</span>), <span class="ruby-identifier">options</span>)
 66: 
 67:       <span class="ruby-identifier">options</span>[<span class="ruby-identifier">:assume_correct_order</span>] = <span class="ruby-identifier">arguments</span>[<span class="ruby-identifier">:assume_correct_order</span>]
 68:       
@@ -305,7 +305,7 @@ of the report. Defaults to 80.
 Builds a <a href="Controller.html#M000147">new</a> <a
 href="Controller.html">Controller</a> for the given log file format.
 <tt>format</tt> Logfile format. Defaults to :rails Options are passd on to
-the <a href="LogParser.html">LogParser</a>.
+the LogParser.
 </p>
 <ul>
 <li><tt>:aggregator</tt> <a href="Aggregator.html">Aggregator</a> array.
@@ -389,14 +389,10 @@ every request that is parsed from the provided sources (see add_source)
           <div class="method-source-code" id="M000149-source">
 <pre>
      <span class="ruby-comment cmt"># File lib/request_log_analyzer/controller.rb, line 150</span>
-150:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">add_aggregator</span>(<span class="ruby-identifier">agg</span>)
-151:       <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">Symbol</span>)
-152:         <span class="ruby-identifier">require</span> <span class="ruby-constant">File</span>.<span class="ruby-identifier">dirname</span>(<span class="ruby-keyword kw">__FILE__</span>) <span class="ruby-operator">+</span> <span class="ruby-node">&quot;/aggregator/#{agg}&quot;</span>
-153:         <span class="ruby-identifier">agg</span> = <span class="ruby-constant">RequestLogAnalyzer</span><span class="ruby-operator">::</span><span class="ruby-constant">Aggregator</span>.<span class="ruby-identifier">const_get</span>(<span class="ruby-identifier">agg</span>.<span class="ruby-identifier">to_s</span>.<span class="ruby-identifier">split</span>(<span class="ruby-regexp re">/[^a-z0-9]/i</span>).<span class="ruby-identifier">map</span>{ <span class="ruby-operator">|</span><span class="ruby-identifier">w</span><span class="ruby-operator">|</span> <span class="ruby-identifier">w</span>.<span class="ruby-identifier">capitalize</span> }.<span class="ruby-identifier">join</span>(<span class="ruby-value str">''</span>))
-154:       <span class="ruby-keyword kw">end</span>
-155:       
-156:       <span class="ruby-ivar">@aggregators</span> <span class="ruby-operator">&lt;&lt;</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">new</span>(<span class="ruby-ivar">@source</span>, <span class="ruby-ivar">@options</span>)
-157:     <span class="ruby-keyword kw">end</span>
+150:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">add_aggregator</span>(<span class="ruby-identifier">agg</span>)      
+151:       <span class="ruby-identifier">agg</span> = <span class="ruby-constant">RequestLogAnalyzer</span><span class="ruby-operator">::</span><span class="ruby-constant">Aggregator</span>.<span class="ruby-identifier">const_get</span>(<span class="ruby-constant">RequestLogAnalyzer</span><span class="ruby-operator">::</span><span class="ruby-identifier">to_camelcase</span>(<span class="ruby-identifier">agg</span>)) <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">Symbol</span>)
+152:       <span class="ruby-ivar">@aggregators</span> <span class="ruby-operator">&lt;&lt;</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">new</span>(<span class="ruby-ivar">@source</span>, <span class="ruby-ivar">@options</span>)
+153:     <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
@@ -419,15 +415,11 @@ Adds a request filter to the controller.
             onclick="toggleCode('M000151-source');return false;">[Source]</a></p>
           <div class="method-source-code" id="M000151-source">
 <pre>
-     <span class="ruby-comment cmt"># File lib/request_log_analyzer/controller.rb, line 162</span>
-162:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">add_filter</span>(<span class="ruby-identifier">filter</span>, <span class="ruby-identifier">filter_options</span> = {})
-163:       <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">filter</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">Symbol</span>)
-164:         <span class="ruby-identifier">require</span> <span class="ruby-constant">File</span>.<span class="ruby-identifier">dirname</span>(<span class="ruby-keyword kw">__FILE__</span>) <span class="ruby-operator">+</span> <span class="ruby-node">&quot;/filter/#{filter}&quot;</span>
-165:         <span class="ruby-identifier">filter</span> = <span class="ruby-constant">RequestLogAnalyzer</span><span class="ruby-operator">::</span><span class="ruby-constant">Filter</span>.<span class="ruby-identifier">const_get</span>(<span class="ruby-identifier">filter</span>.<span class="ruby-identifier">to_s</span>.<span class="ruby-identifier">split</span>(<span class="ruby-regexp re">/[^a-z0-9]/i</span>).<span class="ruby-identifier">map</span>{ <span class="ruby-operator">|</span><span class="ruby-identifier">w</span><span class="ruby-operator">|</span> <span class="ruby-identifier">w</span>.<span class="ruby-identifier">capitalize</span> }.<span class="ruby-identifier">join</span>(<span class="ruby-value str">''</span>))
-166:       <span class="ruby-keyword kw">end</span>
-167:       
-168:       <span class="ruby-ivar">@filters</span> <span class="ruby-operator">&lt;&lt;</span> <span class="ruby-identifier">filter</span>.<span class="ruby-identifier">new</span>(<span class="ruby-identifier">file_format</span>, <span class="ruby-ivar">@options</span>.<span class="ruby-identifier">merge</span>(<span class="ruby-identifier">filter_options</span>))
-169:     <span class="ruby-keyword kw">end</span>
+     <span class="ruby-comment cmt"># File lib/request_log_analyzer/controller.rb, line 158</span>
+158:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">add_filter</span>(<span class="ruby-identifier">filter</span>, <span class="ruby-identifier">filter_options</span> = {})
+159:       <span class="ruby-identifier">filter</span> = <span class="ruby-constant">RequestLogAnalyzer</span><span class="ruby-operator">::</span><span class="ruby-constant">Filter</span>.<span class="ruby-identifier">const_get</span>(<span class="ruby-constant">RequestLogAnalyzer</span><span class="ruby-operator">::</span><span class="ruby-identifier">to_camelcase</span>(<span class="ruby-identifier">filter</span>)) <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">filter</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">Symbol</span>)
+160:       <span class="ruby-ivar">@filters</span> <span class="ruby-operator">&lt;&lt;</span> <span class="ruby-identifier">filter</span>.<span class="ruby-identifier">new</span>(<span class="ruby-identifier">file_format</span>, <span class="ruby-ivar">@options</span>.<span class="ruby-identifier">merge</span>(<span class="ruby-identifier">filter_options</span>))
+161:     <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
@@ -515,34 +507,37 @@ Runs <a href="../RequestLogAnalyzer.html">RequestLogAnalyzer</a>
             onclick="toggleCode('M000152-source');return false;">[Source]</a></p>
           <div class="method-source-code" id="M000152-source">
 <pre>
-     <span class="ruby-comment cmt"># File lib/request_log_analyzer/controller.rb, line 179</span>
-179:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">run!</span>
-180:       
-181: 
-182:       
-183:       <span class="ruby-ivar">@filters</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">filter</span><span class="ruby-operator">|</span> <span class="ruby-identifier">filter</span>.<span class="ruby-identifier">prepare</span> }
-184:       <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">prepare</span> }
-185:       
-186:       <span class="ruby-keyword kw">begin</span>
-187:         <span class="ruby-ivar">@source</span>.<span class="ruby-identifier">requests</span> <span class="ruby-keyword kw">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">request</span><span class="ruby-operator">|</span>
-188:           <span class="ruby-ivar">@filters</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">filter</span><span class="ruby-operator">|</span> <span class="ruby-identifier">request</span> = <span class="ruby-identifier">filter</span>.<span class="ruby-identifier">filter</span>(<span class="ruby-identifier">request</span>) }
-189:           <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">aggregate</span>(<span class="ruby-identifier">request</span>) } <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">request</span>
-190:         <span class="ruby-keyword kw">end</span>
-191:       <span class="ruby-keyword kw">rescue</span> <span class="ruby-constant">Interrupt</span> =<span class="ruby-operator">&gt;</span> <span class="ruby-identifier">e</span>
-192:         <span class="ruby-identifier">handle_progress</span>(<span class="ruby-identifier">:interrupted</span>)
-193:         <span class="ruby-identifier">puts</span> <span class="ruby-value str">&quot;Caught interrupt! Stopped parsing.&quot;</span>
-194:       <span class="ruby-keyword kw">end</span>
-195: 
-196:       <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">finalize</span> }
-197: 
-198:       <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">header</span>
-199:       <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">report</span>(<span class="ruby-ivar">@output</span>) }
-200:       <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">footer</span>
-201:             
-202:       <span class="ruby-ivar">@source</span>.<span class="ruby-identifier">finalize</span>
-203:       
-204: 
-205:     <span class="ruby-keyword kw">end</span>
+     <span class="ruby-comment cmt"># File lib/request_log_analyzer/controller.rb, line 171</span>
+171:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">run!</span>
+172:       
+173:       <span class="ruby-ivar">@filters</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">filter</span><span class="ruby-operator">|</span> <span class="ruby-identifier">filter</span>.<span class="ruby-identifier">prepare</span> }
+174:       <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">prepare</span> }
+175:       
+176:       <span class="ruby-keyword kw">begin</span>
+177:         <span class="ruby-ivar">@source</span>.<span class="ruby-identifier">each_request</span> <span class="ruby-keyword kw">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">request</span><span class="ruby-operator">|</span>
+178:           <span class="ruby-ivar">@filters</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">filter</span><span class="ruby-operator">|</span> <span class="ruby-identifier">request</span> = <span class="ruby-identifier">filter</span>.<span class="ruby-identifier">filter</span>(<span class="ruby-identifier">request</span>) }
+179:           <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">aggregate</span>(<span class="ruby-identifier">request</span>) } <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">request</span>
+180:         <span class="ruby-keyword kw">end</span>
+181:       <span class="ruby-keyword kw">rescue</span> <span class="ruby-constant">Interrupt</span> =<span class="ruby-operator">&gt;</span> <span class="ruby-identifier">e</span>
+182:         <span class="ruby-identifier">handle_progress</span>(<span class="ruby-identifier">:interrupted</span>)
+183:         <span class="ruby-identifier">puts</span> <span class="ruby-value str">&quot;Caught interrupt! Stopped parsing.&quot;</span>
+184:       <span class="ruby-keyword kw">end</span>
+185: 
+186:       <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">finalize</span> }
+187: 
+188:       <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">header</span>
+189:       <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">report</span>(<span class="ruby-ivar">@output</span>) }
+190:       <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">footer</span>
+191:             
+192:       <span class="ruby-ivar">@source</span>.<span class="ruby-identifier">finalize</span>
+193:       
+194:       <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">io</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">File</span>)
+195:         <span class="ruby-identifier">puts</span>
+196:         <span class="ruby-identifier">puts</span> <span class="ruby-value str">&quot;Report written to: &quot;</span> <span class="ruby-operator">+</span> <span class="ruby-constant">File</span>.<span class="ruby-identifier">expand_path</span>(<span class="ruby-ivar">@output</span>.<span class="ruby-identifier">io</span>.<span class="ruby-identifier">path</span>)
+197:         <span class="ruby-identifier">puts</span> <span class="ruby-value str">&quot;Thanks for using request-log-analyzer!&quot;</span>
+198:         <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">io</span>.<span class="ruby-identifier">close</span>
+199:       <span class="ruby-keyword kw">end</span>
+200:     <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
