--- a/classes/RequestLogAnalyzer/Filter/Base.html
+++ b/classes/RequestLogAnalyzer/Filter/Base.html
@@ -55,8 +55,8 @@
         <tr class="top-aligned-row">
             <td><strong>In:</strong></td>
             <td>
-                <a href="../../../files/lib/request_log_analyzer/filter/base_rb.html">
-                lib/request_log_analyzer/filter/base.rb
+                <a href="../../../files/lib/request_log_analyzer/filter_rb.html">
+                lib/request_log_analyzer/filter.rb
                 </a>
         <br />
             </td>
@@ -80,8 +80,8 @@
 
     <div id="description">
       <p>
-<a href="Base.html">Base</a> <a href="Base.html#M000099">filter</a> class
-used to <a href="Base.html#M000099">filter</a> input requests. All filters
+<a href="Base.html">Base</a> <a href="Base.html#M000128">filter</a> class
+used to <a href="Base.html#M000128">filter</a> input requests. All filters
 should interit from this base.
 </p>
 
@@ -94,9 +94,9 @@ should interit from this base.
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000099">filter</a>&nbsp;&nbsp;
-      <a href="#M000097">new</a>&nbsp;&nbsp;
-      <a href="#M000098">prepare</a>&nbsp;&nbsp;
+      <a href="#M000128">filter</a>&nbsp;&nbsp;
+      <a href="#M000126">new</a>&nbsp;&nbsp;
+      <a href="#M000127">prepare</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -108,7 +108,7 @@ should interit from this base.
       <h3 class="section-bar">Included Modules</h3>
 
       <div id="includes-list">
-        <span class="include-name">RequestLogAnalyzer::FileFormat::Awareness</span>
+        <span class="include-name"><a href="../FileFormat/Awareness.html">RequestLogAnalyzer::FileFormat::Awareness</a></span>
       </div>
     </div>
 
@@ -143,11 +143,11 @@ should interit from this base.
     <div id="methods">
       <h3 class="section-bar">Public Class methods</h3>
 
-      <div id="method-M000097" class="method-detail">
-        <a name="M000097"></a>
+      <div id="method-M000126" class="method-detail">
+        <a name="M000126"></a>
 
         <div class="method-heading">
-          <a href="#M000097" class="method-signature">
+          <a href="#M000126" class="method-signature">
           <span class="method-name">new</span><span class="method-args">(format, options = {})</span>
           </a>
         </div>
@@ -158,14 +158,14 @@ Initializer <tt>format</tt> The file format <tt>options</tt> Are passed to
 the filters.
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000097-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000097-source">
+            onclick="toggleCode('M000126-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000126-source">
 <pre>
-    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/base.rb, line 15</span>
-15:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">initialize</span>(<span class="ruby-identifier">format</span>, <span class="ruby-identifier">options</span> = {})
-16:         <span class="ruby-ivar">@options</span>    = <span class="ruby-identifier">options</span>
-17:         <span class="ruby-identifier">register_file_format</span>(<span class="ruby-identifier">format</span>)
-18:       <span class="ruby-keyword kw">end</span>
+    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter.rb, line 21</span>
+21:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">initialize</span>(<span class="ruby-identifier">format</span>, <span class="ruby-identifier">options</span> = {})
+22:       <span class="ruby-ivar">@options</span>    = <span class="ruby-identifier">options</span>
+23:       <span class="ruby-identifier">register_file_format</span>(<span class="ruby-identifier">format</span>)
+24:     <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
@@ -173,11 +173,11 @@ the filters.
 
       <h3 class="section-bar">Public Instance methods</h3>
 
-      <div id="method-M000099" class="method-detail">
-        <a name="M000099"></a>
+      <div id="method-M000128" class="method-detail">
+        <a name="M000128"></a>
 
         <div class="method-heading">
-          <a href="#M000099" class="method-signature">
+          <a href="#M000128" class="method-signature">
           <span class="method-name">filter</span><span class="method-args">(request)</span>
           </a>
         </div>
@@ -187,39 +187,39 @@ the filters.
 Return the request if the request should be kept. Return nil otherwise.
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000099-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000099-source">
+            onclick="toggleCode('M000128-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000128-source">
 <pre>
-    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/base.rb, line 26</span>
-26:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter</span>(<span class="ruby-identifier">request</span>)
-27:         <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span> <span class="ruby-keyword kw">unless</span> <span class="ruby-identifier">request</span>
-28:         <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">request</span>
-29:       <span class="ruby-keyword kw">end</span>
+    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter.rb, line 32</span>
+32:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter</span>(<span class="ruby-identifier">request</span>)
+33:       <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span> <span class="ruby-keyword kw">unless</span> <span class="ruby-identifier">request</span>
+34:       <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">request</span>
+35:     <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
       </div>
 
-      <div id="method-M000098" class="method-detail">
-        <a name="M000098"></a>
+      <div id="method-M000127" class="method-detail">
+        <a name="M000127"></a>
 
         <div class="method-heading">
-          <a href="#M000098" class="method-signature">
+          <a href="#M000127" class="method-signature">
           <span class="method-name">prepare</span><span class="method-args">()</span>
           </a>
         </div>
       
         <div class="method-description">
           <p>
-Initialize the <a href="Base.html#M000099">filter</a>
+Initialize the <a href="Base.html#M000128">filter</a>
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000098-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000098-source">
+            onclick="toggleCode('M000127-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000127-source">
 <pre>
-    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/base.rb, line 21</span>
-21:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">prepare</span>
-22:       <span class="ruby-keyword kw">end</span>
+    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter.rb, line 27</span>
+27:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">prepare</span>
+28:     <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
