--- a/classes/RequestLogAnalyzer/Source.html
+++ b/classes/RequestLogAnalyzer/Source.html
@@ -55,12 +55,12 @@
         <tr class="top-aligned-row">
             <td><strong>In:</strong></td>
             <td>
-                <a href="../../files/lib/request_log_analyzer/source/base_rb.html">
-                lib/request_log_analyzer/source/base.rb
+                <a href="../../files/lib/request_log_analyzer/source/log_parser_rb.html">
+                lib/request_log_analyzer/source/log_parser.rb
                 </a>
         <br />
-                <a href="../../files/lib/request_log_analyzer/source/log_file_rb.html">
-                lib/request_log_analyzer/source/log_file.rb
+                <a href="../../files/lib/request_log_analyzer/source_rb.html">
+                lib/request_log_analyzer/source.rb
                 </a>
         <br />
             </td>
@@ -80,6 +80,13 @@
 
    </div>
 
+    <div id="method-list">
+      <h3 class="section-bar">Methods</h3>
+
+      <div class="name-list">
+      <a href="#M000105">const_missing</a>&nbsp;&nbsp;
+      </div>
+    </div>
 
   </div>
 
@@ -92,7 +99,7 @@
       <h3 class="section-bar">Classes and Modules</h3>
 
       Class <a href="Source/Base.html" class="link">RequestLogAnalyzer::Source::Base</a><br />
-Class <a href="Source/LogFile.html" class="link">RequestLogAnalyzer::Source::LogFile</a><br />
+Class <a href="Source/LogParser.html" class="link">RequestLogAnalyzer::Source::LogParser</a><br />
 
     </div>
 
@@ -103,6 +110,34 @@ Class <a href="Source/LogFile.html" class="link">RequestLogAnalyzer::Source::Log
 
 
     <!-- if method_list -->
+    <div id="methods">
+      <h3 class="section-bar">Public Class methods</h3>
+
+      <div id="method-M000105" class="method-detail">
+        <a name="M000105"></a>
+
+        <div class="method-heading">
+          <a href="#M000105" class="method-signature">
+          <span class="method-name">const_missing</span><span class="method-args">(const)</span>
+          </a>
+        </div>
+      
+        <div class="method-description">
+          <p><a class="source-toggle" href="#"
+            onclick="toggleCode('M000105-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000105-source">
+<pre>
+   <span class="ruby-comment cmt"># File lib/request_log_analyzer/source.rb, line 3</span>
+3:   <span class="ruby-keyword kw">def</span> <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">const_missing</span>(<span class="ruby-identifier">const</span>)
+4:     <span class="ruby-constant">RequestLogAnalyzer</span><span class="ruby-operator">::</span><span class="ruby-identifier">load_default_class_file</span>(<span class="ruby-keyword kw">self</span>, <span class="ruby-identifier">const</span>)
+5:   <span class="ruby-keyword kw">end</span>
+</pre>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
 
 
   </div>
