--- a/classes/RequestLogAnalyzer/Tracker.html
+++ b/classes/RequestLogAnalyzer/Tracker.html
@@ -55,10 +55,6 @@
         <tr class="top-aligned-row">
             <td><strong>In:</strong></td>
             <td>
-                <a href="../../files/lib/request_log_analyzer/tracker/base_rb.html">
-                lib/request_log_analyzer/tracker/base.rb
-                </a>
-        <br />
                 <a href="../../files/lib/request_log_analyzer/tracker/category_rb.html">
                 lib/request_log_analyzer/tracker/category.rb
                 </a>
@@ -73,6 +69,10 @@
         <br />
                 <a href="../../files/lib/request_log_analyzer/tracker/timespan_rb.html">
                 lib/request_log_analyzer/tracker/timespan.rb
+                </a>
+        <br />
+                <a href="../../files/lib/request_log_analyzer/tracker_rb.html">
+                lib/request_log_analyzer/tracker.rb
                 </a>
         <br />
             </td>
@@ -92,6 +92,13 @@
 
    </div>
 
+    <div id="method-list">
+      <h3 class="section-bar">Methods</h3>
+
+      <div class="name-list">
+      <a href="#M000045">const_missing</a>&nbsp;&nbsp;
+      </div>
+    </div>
 
   </div>
 
@@ -118,6 +125,39 @@ Class <a href="Tracker/Timespan.html" class="link">RequestLogAnalyzer::Tracker::
 
 
     <!-- if method_list -->
+    <div id="methods">
+      <h3 class="section-bar">Public Class methods</h3>
+
+      <div id="method-M000045" class="method-detail">
+        <a name="M000045"></a>
+
+        <div class="method-heading">
+          <a href="#M000045" class="method-signature">
+          <span class="method-name">const_missing</span><span class="method-args">(const)</span>
+          </a>
+        </div>
+      
+        <div class="method-description">
+          <p>
+<a href="Tracker.html#M000045">const_missing</a>: this function is used to
+load subclasses in the RequestLogAnalyzer::Track namespace. It will
+automatically load the required file based on the class name
+</p>
+          <p><a class="source-toggle" href="#"
+            onclick="toggleCode('M000045-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000045-source">
+<pre>
+   <span class="ruby-comment cmt"># File lib/request_log_analyzer/tracker.rb, line 5</span>
+5:   <span class="ruby-keyword kw">def</span> <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">const_missing</span>(<span class="ruby-identifier">const</span>)
+6:     <span class="ruby-constant">RequestLogAnalyzer</span><span class="ruby-operator">::</span><span class="ruby-identifier">load_default_class_file</span>(<span class="ruby-keyword kw">self</span>, <span class="ruby-identifier">const</span>)
+7:   <span class="ruby-keyword kw">end</span>
+</pre>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
 
 
   </div>
