--- a/fr_class_index.html
+++ b/fr_class_index.html
@@ -40,8 +40,8 @@
     <a href="classes/RequestLogAnalyzer/Anonymizers.html">RequestLogAnalyzer::Anonymizers</a><br />
     <a href="classes/RequestLogAnalyzer/Controller.html">RequestLogAnalyzer::Controller</a><br />
     <a href="classes/RequestLogAnalyzer/FileFormat.html">RequestLogAnalyzer::FileFormat</a><br />
-    <a href="classes/RequestLogAnalyzer/FileFormat.html">RequestLogAnalyzer::FileFormat</a><br />
     <a href="classes/RequestLogAnalyzer/FileFormat/Awareness.html">RequestLogAnalyzer::FileFormat::Awareness</a><br />
+    <a href="classes/RequestLogAnalyzer/FileFormat/Base.html">RequestLogAnalyzer::FileFormat::Base</a><br />
     <a href="classes/RequestLogAnalyzer/FileFormat/Merb.html">RequestLogAnalyzer::FileFormat::Merb</a><br />
     <a href="classes/RequestLogAnalyzer/FileFormat/Rails.html">RequestLogAnalyzer::FileFormat::Rails</a><br />
     <a href="classes/RequestLogAnalyzer/FileFormat/RailsDevelopment.html">RequestLogAnalyzer::FileFormat::RailsDevelopment</a><br />
@@ -52,10 +52,9 @@
     <a href="classes/RequestLogAnalyzer/Filter/Timespan.html">RequestLogAnalyzer::Filter::Timespan</a><br />
     <a href="classes/RequestLogAnalyzer/LineDefinition.html">RequestLogAnalyzer::LineDefinition</a><br />
     <a href="classes/RequestLogAnalyzer/LineDefinition/Definer.html">RequestLogAnalyzer::LineDefinition::Definer</a><br />
-    <a href="classes/RequestLogAnalyzer/LogParser.html">RequestLogAnalyzer::LogParser</a><br />
     <a href="classes/RequestLogAnalyzer/LogProcessor.html">RequestLogAnalyzer::LogProcessor</a><br />
     <a href="classes/RequestLogAnalyzer/Output.html">RequestLogAnalyzer::Output</a><br />
-    <a href="classes/RequestLogAnalyzer/Output.html">RequestLogAnalyzer::Output</a><br />
+    <a href="classes/RequestLogAnalyzer/Output/Base.html">RequestLogAnalyzer::Output::Base</a><br />
     <a href="classes/RequestLogAnalyzer/Output/FixedWidth.html">RequestLogAnalyzer::Output::FixedWidth</a><br />
     <a href="classes/RequestLogAnalyzer/Output/FixedWidth/Color.html">RequestLogAnalyzer::Output::FixedWidth::Color</a><br />
     <a href="classes/RequestLogAnalyzer/Output/FixedWidth/Monochrome.html">RequestLogAnalyzer::Output::FixedWidth::Monochrome</a><br />
@@ -63,7 +62,7 @@
     <a href="classes/RequestLogAnalyzer/Request.html">RequestLogAnalyzer::Request</a><br />
     <a href="classes/RequestLogAnalyzer/Source.html">RequestLogAnalyzer::Source</a><br />
     <a href="classes/RequestLogAnalyzer/Source/Base.html">RequestLogAnalyzer::Source::Base</a><br />
-    <a href="classes/RequestLogAnalyzer/Source/LogFile.html">RequestLogAnalyzer::Source::LogFile</a><br />
+    <a href="classes/RequestLogAnalyzer/Source/LogParser.html">RequestLogAnalyzer::Source::LogParser</a><br />
     <a href="classes/RequestLogAnalyzer/Tracker.html">RequestLogAnalyzer::Tracker</a><br />
     <a href="classes/RequestLogAnalyzer/Tracker/Base.html">RequestLogAnalyzer::Tracker::Base</a><br />
     <a href="classes/RequestLogAnalyzer/Tracker/Category.html">RequestLogAnalyzer::Tracker::Category</a><br />
