--- a/classes/RequestLogAnalyzer/Filter.html
+++ b/classes/RequestLogAnalyzer/Filter.html
@@ -55,8 +55,8 @@
         <tr class="top-aligned-row">
             <td><strong>In:</strong></td>
             <td>
-                <a href="../../files/lib/request_log_analyzer/filter/anonimize_rb.html">
-                lib/request_log_analyzer/filter/anonimize.rb
+                <a href="../../files/lib/request_log_analyzer/filter/anonymize_rb.html">
+                lib/request_log_analyzer/filter/anonymize.rb
                 </a>
         <br />
                 <a href="../../files/lib/request_log_analyzer/filter/field_rb.html">
@@ -92,7 +92,7 @@
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000123">const_missing</a>&nbsp;&nbsp;
+      <a href="#M000125">const_missing</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -106,7 +106,7 @@
     <div id="class-list">
       <h3 class="section-bar">Classes and Modules</h3>
 
-      Class <a href="Filter/Anonimize.html" class="link">RequestLogAnalyzer::Filter::Anonimize</a><br />
+      Class <a href="Filter/Anonymize.html" class="link">RequestLogAnalyzer::Filter::Anonymize</a><br />
 Class <a href="Filter/Base.html" class="link">RequestLogAnalyzer::Filter::Base</a><br />
 Class <a href="Filter/Field.html" class="link">RequestLogAnalyzer::Filter::Field</a><br />
 Class <a href="Filter/Timespan.html" class="link">RequestLogAnalyzer::Filter::Timespan</a><br />
@@ -123,11 +123,11 @@ Class <a href="Filter/Timespan.html" class="link">RequestLogAnalyzer::Filter::Ti
     <div id="methods">
       <h3 class="section-bar">Public Class methods</h3>
 
-      <div id="method-M000123" class="method-detail">
-        <a name="M000123"></a>
+      <div id="method-M000125" class="method-detail">
+        <a name="M000125"></a>
 
         <div class="method-heading">
-          <a href="#M000123" class="method-signature">
+          <a href="#M000125" class="method-signature">
           <span class="method-name">const_missing</span><span class="method-args">(const)</span>
           </a>
         </div>
@@ -135,12 +135,12 @@ Class <a href="Filter/Timespan.html" class="link">RequestLogAnalyzer::Filter::Ti
         <div class="method-description">
           <p>
 <a href="Filter.html">Filter</a> class loader using <a
-href="Filter.html#M000123">const_missing</a> This function will
+href="Filter.html#M000125">const_missing</a> This function will
 automatically load the class file based on the name of the class
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000123-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000123-source">
+            onclick="toggleCode('M000125-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000125-source">
 <pre>
    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter.rb, line 5</span>
 5:   <span class="ruby-keyword kw">def</span> <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">const_missing</span>(<span class="ruby-identifier">const</span>)
