--- a/fr_class_index.html
+++ b/fr_class_index.html
@@ -37,7 +37,6 @@
     <a href="classes/RequestLogAnalyzer/Aggregator/Echo.html">RequestLogAnalyzer::Aggregator::Echo</a><br />
     <a href="classes/RequestLogAnalyzer/Aggregator/Summarizer.html">RequestLogAnalyzer::Aggregator::Summarizer</a><br />
     <a href="classes/RequestLogAnalyzer/Aggregator/Summarizer/Definer.html">RequestLogAnalyzer::Aggregator::Summarizer::Definer</a><br />
-    <a href="classes/RequestLogAnalyzer/Anonymizers.html">RequestLogAnalyzer::Anonymizers</a><br />
     <a href="classes/RequestLogAnalyzer/Controller.html">RequestLogAnalyzer::Controller</a><br />
     <a href="classes/RequestLogAnalyzer/FileFormat.html">RequestLogAnalyzer::FileFormat</a><br />
     <a href="classes/RequestLogAnalyzer/FileFormat/Awareness.html">RequestLogAnalyzer::FileFormat::Awareness</a><br />
@@ -45,8 +44,9 @@
     <a href="classes/RequestLogAnalyzer/FileFormat/Merb.html">RequestLogAnalyzer::FileFormat::Merb</a><br />
     <a href="classes/RequestLogAnalyzer/FileFormat/Rails.html">RequestLogAnalyzer::FileFormat::Rails</a><br />
     <a href="classes/RequestLogAnalyzer/FileFormat/RailsDevelopment.html">RequestLogAnalyzer::FileFormat::RailsDevelopment</a><br />
+    <a href="classes/RequestLogAnalyzer/FileFormat/Request.html">RequestLogAnalyzer::FileFormat::Request</a><br />
     <a href="classes/RequestLogAnalyzer/Filter.html">RequestLogAnalyzer::Filter</a><br />
-    <a href="classes/RequestLogAnalyzer/Filter/Anonimize.html">RequestLogAnalyzer::Filter::Anonimize</a><br />
+    <a href="classes/RequestLogAnalyzer/Filter/Anonymize.html">RequestLogAnalyzer::Filter::Anonymize</a><br />
     <a href="classes/RequestLogAnalyzer/Filter/Base.html">RequestLogAnalyzer::Filter::Base</a><br />
     <a href="classes/RequestLogAnalyzer/Filter/Field.html">RequestLogAnalyzer::Filter::Field</a><br />
     <a href="classes/RequestLogAnalyzer/Filter/Timespan.html">RequestLogAnalyzer::Filter::Timespan</a><br />
@@ -60,13 +60,14 @@
     <a href="classes/RequestLogAnalyzer/Output/FixedWidth/Monochrome.html">RequestLogAnalyzer::Output::FixedWidth::Monochrome</a><br />
     <a href="classes/RequestLogAnalyzer/Output/HTML.html">RequestLogAnalyzer::Output::HTML</a><br />
     <a href="classes/RequestLogAnalyzer/Request.html">RequestLogAnalyzer::Request</a><br />
+    <a href="classes/RequestLogAnalyzer/Request/Converters.html">RequestLogAnalyzer::Request::Converters</a><br />
     <a href="classes/RequestLogAnalyzer/Source.html">RequestLogAnalyzer::Source</a><br />
     <a href="classes/RequestLogAnalyzer/Source/Base.html">RequestLogAnalyzer::Source::Base</a><br />
     <a href="classes/RequestLogAnalyzer/Source/LogParser.html">RequestLogAnalyzer::Source::LogParser</a><br />
     <a href="classes/RequestLogAnalyzer/Tracker.html">RequestLogAnalyzer::Tracker</a><br />
     <a href="classes/RequestLogAnalyzer/Tracker/Base.html">RequestLogAnalyzer::Tracker::Base</a><br />
-    <a href="classes/RequestLogAnalyzer/Tracker/Category.html">RequestLogAnalyzer::Tracker::Category</a><br />
     <a href="classes/RequestLogAnalyzer/Tracker/Duration.html">RequestLogAnalyzer::Tracker::Duration</a><br />
+    <a href="classes/RequestLogAnalyzer/Tracker/Frequency.html">RequestLogAnalyzer::Tracker::Frequency</a><br />
     <a href="classes/RequestLogAnalyzer/Tracker/HourlySpread.html">RequestLogAnalyzer::Tracker::HourlySpread</a><br />
     <a href="classes/RequestLogAnalyzer/Tracker/Timespan.html">RequestLogAnalyzer::Tracker::Timespan</a><br />
   </div>
