--- a/classes/RequestLogAnalyzer/Controller.html
+++ b/classes/RequestLogAnalyzer/Controller.html
@@ -103,7 +103,7 @@ href="Controller.html#M000147">new</a> aggregator
 aggregator
 
 </li>
-<li>Use the <a href="Controller.html#M000152">run!</a> method to start the
+<li>Use the <a href="Controller.html#M000154">run!</a> method to start the
 parser and send the requests to the aggregators.
 
 </li>
@@ -127,10 +127,12 @@ helpful to parse requests from several logrotated log files.
       <a href="#M000150">&gt;&gt;</a>&nbsp;&nbsp;
       <a href="#M000149">add_aggregator</a>&nbsp;&nbsp;
       <a href="#M000151">add_filter</a>&nbsp;&nbsp;
+      <a href="#M000153">aggregate_request</a>&nbsp;&nbsp;
       <a href="#M000146">build</a>&nbsp;&nbsp;
+      <a href="#M000152">filter_request</a>&nbsp;&nbsp;
       <a href="#M000148">handle_progress</a>&nbsp;&nbsp;
       <a href="#M000147">new</a>&nbsp;&nbsp;
-      <a href="#M000152">run!</a>&nbsp;&nbsp;
+      <a href="#M000154">run!</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -425,6 +427,56 @@ Adds a request filter to the controller.
         </div>
       </div>
 
+      <div id="method-M000153" class="method-detail">
+        <a name="M000153"></a>
+
+        <div class="method-heading">
+          <a href="#M000153" class="method-signature">
+          <span class="method-name">aggregate_request</span><span class="method-args">(request)</span>
+          </a>
+        </div>
+      
+        <div class="method-description">
+          <p><a class="source-toggle" href="#"
+            onclick="toggleCode('M000153-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000153-source">
+<pre>
+     <span class="ruby-comment cmt"># File lib/request_log_analyzer/controller.rb, line 171</span>
+171:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">aggregate_request</span>(<span class="ruby-identifier">request</span>)
+172:       <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">aggregate</span>(<span class="ruby-identifier">request</span>) }
+173:     <span class="ruby-keyword kw">end</span>
+</pre>
+          </div>
+        </div>
+      </div>
+
+      <div id="method-M000152" class="method-detail">
+        <a name="M000152"></a>
+
+        <div class="method-heading">
+          <a href="#M000152" class="method-signature">
+          <span class="method-name">filter_request</span><span class="method-args">(request)</span>
+          </a>
+        </div>
+      
+        <div class="method-description">
+          <p><a class="source-toggle" href="#"
+            onclick="toggleCode('M000152-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000152-source">
+<pre>
+     <span class="ruby-comment cmt"># File lib/request_log_analyzer/controller.rb, line 163</span>
+163:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter_request</span>(<span class="ruby-identifier">request</span>)
+164:       <span class="ruby-ivar">@filters</span>.<span class="ruby-identifier">each</span> <span class="ruby-keyword kw">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">filter</span><span class="ruby-operator">|</span> 
+165:         <span class="ruby-identifier">request</span> = <span class="ruby-identifier">filter</span>.<span class="ruby-identifier">filter</span>(<span class="ruby-identifier">request</span>)
+166:         <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span> <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">request</span>.<span class="ruby-identifier">nil?</span>
+167:       <span class="ruby-keyword kw">end</span>
+168:       <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">request</span>
+169:     <span class="ruby-keyword kw">end</span>
+</pre>
+          </div>
+        </div>
+      </div>
+
       <div id="method-M000148" class="method-detail">
         <a name="M000148"></a>
 
@@ -449,7 +501,7 @@ current line.
 131:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">handle_progress</span>(<span class="ruby-identifier">message</span>, <span class="ruby-identifier">value</span> = <span class="ruby-keyword kw">nil</span>)
 132:       <span class="ruby-keyword kw">case</span> <span class="ruby-identifier">message</span>
 133:       <span class="ruby-keyword kw">when</span> <span class="ruby-identifier">:started</span>
-134:         <span class="ruby-ivar">@progress_bar</span> = <span class="ruby-constant">CommandLine</span><span class="ruby-operator">::</span><span class="ruby-constant">ProgressBar</span>.<span class="ruby-identifier">new</span>(<span class="ruby-constant">File</span>.<span class="ruby-identifier">basename</span>(<span class="ruby-identifier">value</span>), <span class="ruby-constant">File</span>.<span class="ruby-identifier">size</span>(<span class="ruby-identifier">value</span>))
+134:         <span class="ruby-ivar">@progress_bar</span> = <span class="ruby-constant">CommandLine</span><span class="ruby-operator">::</span><span class="ruby-constant">ProgressBar</span>.<span class="ruby-identifier">new</span>(<span class="ruby-constant">File</span>.<span class="ruby-identifier">basename</span>(<span class="ruby-identifier">value</span>), <span class="ruby-constant">File</span>.<span class="ruby-identifier">size</span>(<span class="ruby-identifier">value</span>), <span class="ruby-constant">STDOUT</span>)
 135:       <span class="ruby-keyword kw">when</span> <span class="ruby-identifier">:finished</span>
 136:         <span class="ruby-ivar">@progress_bar</span>.<span class="ruby-identifier">finish</span>
 137:         <span class="ruby-ivar">@progress_bar</span> = <span class="ruby-keyword kw">nil</span>
@@ -467,11 +519,11 @@ current line.
         </div>
       </div>
 
-      <div id="method-M000152" class="method-detail">
-        <a name="M000152"></a>
+      <div id="method-M000154" class="method-detail">
+        <a name="M000154"></a>
 
         <div class="method-heading">
-          <a href="#M000152" class="method-signature">
+          <a href="#M000154" class="method-signature">
           <span class="method-name">run!</span><span class="method-args">()</span>
           </a>
         </div>
@@ -504,40 +556,40 @@ Runs <a href="../RequestLogAnalyzer.html">RequestLogAnalyzer</a>
 </li>
 </ol>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000152-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000152-source">
+            onclick="toggleCode('M000154-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000154-source">
 <pre>
-     <span class="ruby-comment cmt"># File lib/request_log_analyzer/controller.rb, line 171</span>
-171:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">run!</span>
-172:       
-173:       <span class="ruby-ivar">@filters</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">filter</span><span class="ruby-operator">|</span> <span class="ruby-identifier">filter</span>.<span class="ruby-identifier">prepare</span> }
-174:       <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">prepare</span> }
-175:       
-176:       <span class="ruby-keyword kw">begin</span>
-177:         <span class="ruby-ivar">@source</span>.<span class="ruby-identifier">each_request</span> <span class="ruby-keyword kw">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">request</span><span class="ruby-operator">|</span>
-178:           <span class="ruby-ivar">@filters</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">filter</span><span class="ruby-operator">|</span> <span class="ruby-identifier">request</span> = <span class="ruby-identifier">filter</span>.<span class="ruby-identifier">filter</span>(<span class="ruby-identifier">request</span>) }
-179:           <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">aggregate</span>(<span class="ruby-identifier">request</span>) } <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">request</span>
-180:         <span class="ruby-keyword kw">end</span>
-181:       <span class="ruby-keyword kw">rescue</span> <span class="ruby-constant">Interrupt</span> =<span class="ruby-operator">&gt;</span> <span class="ruby-identifier">e</span>
-182:         <span class="ruby-identifier">handle_progress</span>(<span class="ruby-identifier">:interrupted</span>)
-183:         <span class="ruby-identifier">puts</span> <span class="ruby-value str">&quot;Caught interrupt! Stopped parsing.&quot;</span>
-184:       <span class="ruby-keyword kw">end</span>
-185: 
-186:       <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">finalize</span> }
-187: 
-188:       <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">header</span>
-189:       <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">report</span>(<span class="ruby-ivar">@output</span>) }
-190:       <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">footer</span>
-191:             
-192:       <span class="ruby-ivar">@source</span>.<span class="ruby-identifier">finalize</span>
-193:       
-194:       <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">io</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">File</span>)
-195:         <span class="ruby-identifier">puts</span>
-196:         <span class="ruby-identifier">puts</span> <span class="ruby-value str">&quot;Report written to: &quot;</span> <span class="ruby-operator">+</span> <span class="ruby-constant">File</span>.<span class="ruby-identifier">expand_path</span>(<span class="ruby-ivar">@output</span>.<span class="ruby-identifier">io</span>.<span class="ruby-identifier">path</span>)
-197:         <span class="ruby-identifier">puts</span> <span class="ruby-value str">&quot;Thanks for using request-log-analyzer!&quot;</span>
-198:         <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">io</span>.<span class="ruby-identifier">close</span>
-199:       <span class="ruby-keyword kw">end</span>
-200:     <span class="ruby-keyword kw">end</span>
+     <span class="ruby-comment cmt"># File lib/request_log_analyzer/controller.rb, line 183</span>
+183:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">run!</span>
+184:       
+185:       <span class="ruby-ivar">@filters</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">filter</span><span class="ruby-operator">|</span> <span class="ruby-identifier">filter</span>.<span class="ruby-identifier">prepare</span> }
+186:       <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">prepare</span> }
+187:       
+188:       <span class="ruby-keyword kw">begin</span>
+189:         <span class="ruby-ivar">@source</span>.<span class="ruby-identifier">each_request</span> <span class="ruby-keyword kw">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">request</span><span class="ruby-operator">|</span>
+190:           <span class="ruby-identifier">request</span> = <span class="ruby-identifier">filter_request</span>(<span class="ruby-identifier">request</span>)
+191:           <span class="ruby-identifier">aggregate_request</span>(<span class="ruby-identifier">request</span>) <span class="ruby-keyword kw">unless</span> <span class="ruby-identifier">request</span>.<span class="ruby-identifier">nil?</span>
+192:         <span class="ruby-keyword kw">end</span>
+193:       <span class="ruby-keyword kw">rescue</span> <span class="ruby-constant">Interrupt</span> =<span class="ruby-operator">&gt;</span> <span class="ruby-identifier">e</span>
+194:         <span class="ruby-identifier">handle_progress</span>(<span class="ruby-identifier">:interrupted</span>)
+195:         <span class="ruby-identifier">puts</span> <span class="ruby-value str">&quot;Caught interrupt! Stopped parsing.&quot;</span>
+196:       <span class="ruby-keyword kw">end</span>
+197: 
+198:       <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">finalize</span> }
+199: 
+200:       <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">header</span>
+201:       <span class="ruby-ivar">@aggregators</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">agg</span><span class="ruby-operator">|</span> <span class="ruby-identifier">agg</span>.<span class="ruby-identifier">report</span>(<span class="ruby-ivar">@output</span>) }
+202:       <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">footer</span>
+203:             
+204:       <span class="ruby-ivar">@source</span>.<span class="ruby-identifier">finalize</span>
+205:       
+206:       <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">io</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">File</span>)
+207:         <span class="ruby-identifier">puts</span>
+208:         <span class="ruby-identifier">puts</span> <span class="ruby-value str">&quot;Report written to: &quot;</span> <span class="ruby-operator">+</span> <span class="ruby-constant">File</span>.<span class="ruby-identifier">expand_path</span>(<span class="ruby-ivar">@output</span>.<span class="ruby-identifier">io</span>.<span class="ruby-identifier">path</span>)
+209:         <span class="ruby-identifier">puts</span> <span class="ruby-value str">&quot;Thanks for using request-log-analyzer!&quot;</span>
+210:         <span class="ruby-ivar">@output</span>.<span class="ruby-identifier">io</span>.<span class="ruby-identifier">close</span>
+211:       <span class="ruby-keyword kw">end</span>
+212:     <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
