--- a/classes/RequestLogAnalyzer/Filter/Field.html
+++ b/classes/RequestLogAnalyzer/Filter/Field.html
@@ -107,8 +107,8 @@ rejected.
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000130">filter</a>&nbsp;&nbsp;
-      <a href="#M000129">prepare</a>&nbsp;&nbsp;
+      <a href="#M000132">filter</a>&nbsp;&nbsp;
+      <a href="#M000131">prepare</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -153,11 +153,11 @@ rejected.
     <div id="methods">
       <h3 class="section-bar">Public Instance methods</h3>
 
-      <div id="method-M000130" class="method-detail">
-        <a name="M000130"></a>
+      <div id="method-M000132" class="method-detail">
+        <a name="M000132"></a>
 
         <div class="method-heading">
-          <a href="#M000130" class="method-signature">
+          <a href="#M000132" class="method-signature">
           <span class="method-name">filter</span><span class="method-args">(request)</span>
           </a>
         </div>
@@ -170,30 +170,26 @@ nil otherwise. <tt>request</tt> <a href="../Request.html">Request</a>
 Object
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000130-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000130-source">
+            onclick="toggleCode('M000132-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000132-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/field.rb, line 29</span>
 29:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter</span>(<span class="ruby-identifier">request</span>)
-30:       <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span> <span class="ruby-keyword kw">unless</span> <span class="ruby-identifier">request</span>
-31:       
-32:       <span class="ruby-identifier">found_field</span> = <span class="ruby-identifier">request</span>.<span class="ruby-identifier">every</span>(<span class="ruby-ivar">@field</span>).<span class="ruby-identifier">any?</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">value</span><span class="ruby-operator">|</span> <span class="ruby-ivar">@value</span> <span class="ruby-operator">===</span> <span class="ruby-identifier">value</span> }
-33:       
-34:       <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span> <span class="ruby-keyword kw">if</span> <span class="ruby-operator">!</span><span class="ruby-identifier">found_field</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@mode</span> <span class="ruby-operator">==</span> <span class="ruby-identifier">:select</span>
-35:       <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span> <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">found_field</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@mode</span> <span class="ruby-operator">==</span> <span class="ruby-identifier">:reject</span>
-36:       
-37:       <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">request</span>
-38:     <span class="ruby-keyword kw">end</span>
+30:       <span class="ruby-identifier">found_field</span> = <span class="ruby-identifier">request</span>.<span class="ruby-identifier">every</span>(<span class="ruby-ivar">@field</span>).<span class="ruby-identifier">any?</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">value</span><span class="ruby-operator">|</span> <span class="ruby-ivar">@value</span> <span class="ruby-operator">===</span> <span class="ruby-identifier">value</span>.<span class="ruby-identifier">to_s</span> }      
+31:       <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span> <span class="ruby-keyword kw">if</span> <span class="ruby-operator">!</span><span class="ruby-identifier">found_field</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@mode</span> <span class="ruby-operator">==</span> <span class="ruby-identifier">:select</span>
+32:       <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span> <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">found_field</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@mode</span> <span class="ruby-operator">==</span> <span class="ruby-identifier">:reject</span>
+33:       <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">request</span>
+34:     <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
       </div>
 
-      <div id="method-M000129" class="method-detail">
-        <a name="M000129"></a>
+      <div id="method-M000131" class="method-detail">
+        <a name="M000131"></a>
 
         <div class="method-heading">
-          <a href="#M000129" class="method-signature">
+          <a href="#M000131" class="method-signature">
           <span class="method-name">prepare</span><span class="method-args">()</span>
           </a>
         </div>
@@ -203,8 +199,8 @@ Object
 Setup mode, field and value.
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000129-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000129-source">
+            onclick="toggleCode('M000131-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000131-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/field.rb, line 13</span>
 13:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">prepare</span>
